# frogs

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  frogs.desktop.in  frogs.rc.in
.github/workflows/: build.yml  package.yml
bmp/: mine.elf  tank.elf
bmp/RCS/: mine.elf,v  tank.elf,v
doc/: HISTORY  INSTALL  README  bull1.txt  bull2.txt  elf.txt  elflinks.txt  robots.txt  robots1.txt  robots2.txt  robots4.txt
packaging/arch/: PKGBUILD
src/: Makefile.am  ceo.c  ceo.h  chardisp.c  chardisp.h  compat.h  frogs.c  frogs.h  helm.c  helm.h  magi.c  magi.h  player.c  player.h  pond.c  pond.h  racket.c  racket.h  room.c  room.h  s.c  sprite.c  sprite.h  tank.c  tank.h  util.c  util.h
wav/: racket.elf
