bin_PROGRAMS = frogs

frogs_SOURCES = \
	chardisp.c chardisp.h \
	ceo.c ceo.h \
	frogs.c frogs.h \
	helm.c helm.h \
	magi.c magi.h \
	player.c player.h \
	pond.c pond.h \
	racket.c racket.h \
	room.c room.h \
	sprite.c sprite.h \
	tank.c tank.h \
	util.c util.h

frogs_CFLAGS  = $(SDL2_CFLAGS) $(SDL2_MIXER_CFLAGS)
frogs_LDADD   = $(SDL2_LIBS) $(SDL2_MIXER_LIBS)
